--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  animated_text_kit: ^4.2.1
+
   flutter:
     sdk: flutter
 
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   rflutter_alert: ^1.0.2
+  font_awesome_flutter: ^8.4.0
 
 dev_dependencies:
   flutter_test:
